06 Dec 2003 Pre-init residual to zero in tapedev execute_ccw -
            freige@fibertel.com.ar by Fish
            thread's select list before closing it. - Fish
06 Dec 2003 Fix to 'unbind_device' to remove listening socket from panel
            thread's select list before closing it. - Fish
04 Dec 2003 CTCI_Init (ctc_ctci.c): malloc working CTCBLK to work around
            gcc 3.x bug caused by large vars allocated on stack - Fish
03 Dec 2003 Fix fthreads to behave as pthreads does regarding return codes
            (conform to SUS (Single UNIX Specification) rather than DCE
            (Distributed Computing Environment) semantics; affected CTCI
            logic's 'timed_wait_condition' return code tests) - Fish
03 Dec 2003 Added ARCHMODE to other "IPL failure" messages too - Fish
27 Dec 2002 Added comprehensive details to README.CVS document - Fish
27 Dec 2002 Fix bug ctc logic to accept MAC addr in lieu of IP addr - Fish
27 Dec 2002 Fix warning about IFC_IOCtl in tuntap.c - Fish
27 Dec 2002 obtain_lock not needed to signal_condition in ctc logic - Fish 
27 Dec 2002 Use sched_yield (not usleep) if can't enqueue ctc frame - Fish
27 Dec 2002 Rewrote ParseMAC function to fix subtle bug - Fish
27 Dec 2002 Fixed tt32stats command to work with new LCS CTC logic - Fish
27 Dec 2002 Un-tabbed ctc source modules - Fish
15 Dec 2002 Renumbered messages in printer.c and console.c - Jay Maynard
15 Dec 2002 Streamlining Windows build processing, add P4 support - Volker Bandke
12 Dec 2002 Main storage addressing cleanup - Jan Jaeger
09 Dec 2002 Fix windows comiple errors in hsccmd.c - Jim Pierson
05 Dec 2002 Various fixes and roll back of 30/6 performance mods - Jan Jaeger
26 Nov 2002 Missing devtype.c FBA entries - Greg Smith and Ivan
23 Nov 2002 Remove cckd/het zlib dependency - Greg Smith
16 Nov 2002 Add MVCLU and CLCLU instructions - Jan Jaeger
16 Nov 2002 Add TROO, TROT, TRTO and TRTT instructions - Jan Jaeger